listing page html

--- a/html/listing.html
+++ b/html/listing.html
@@ -312,12 +312,12 @@
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
                             <li>
-                                <input type="file" id="pic2" name="pic1" accept=".png,.jpg">
+                                <input type="file" id="pic2" name="pic2" accept=".png,.jpg">
                                 <label for="pic2"><img id="imgAdd1" src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
                             <li>
-                                <input type="file" id="pic3" name="pic1" accept=".png,.jpg">
+                                <input type="file" id="pic3" name="pic3" accept=".png,.jpg">
                                 <label for="pic3"><img src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
@@ -548,6 +548,9 @@
         previewBeforeUpload("pic");
         previewBeforeUpload("paper");
         // previewBeforeUpload("file-3");
+        previewBeforeUpload("pic1");
+        previewBeforeUpload("pic2");
+        previewBeforeUpload("pic3");
     </script>
 
     <!-- pdf檔上傳預覽
