後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後後端串接

--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -184,7 +184,8 @@
                 <p class="information">會員暱稱：<span id="memNickName3DPage" class="showChangeValue" name="1">text</span> <input class="changeValue" value="text" name="1" placeholder="請輸入您的會員暱稱"></input>
                 </p>
                 <p class="information">會員帳號：<span id="memId3DPage">milktea</span></p>
-                <p class="information">會員密碼：<span id="memPwd3DPage">20190119</span></p>
+                <p class="information">會員密碼：<span id="memPwd3DPage" class="showChangeValue" name="7">20190119</span><input class="changeValue" value="text" name="7" placeholder="請輸入您的姓名"></input>
+                </p>
                 </p>
                 <p class="information">姓名：<span id="memName3DPage" class="showChangeValue" name="2">text</span><input class="changeValue" value="text" name="2" placeholder="請輸入您的姓名"></input>
                 </p>
@@ -264,8 +265,8 @@
         <section class="title">
             <p>消費紀錄
                 <span class="titleButton">
-                    <button class="round round3dBtn" type="button">現在訂單</button>
-                    <button class="round round3dBtn" type="button">歷史訂單</button>
+                    <button class="round round3dBtn" id="nowOrder3dBtn" type="button">現在訂單</button>
+                    <button class="round round3dBtn" id="oldOrder3dBtn" type="button">歷史訂單</button>
                 </span>
             </p>
             <span class="close3D"><i class="fas fa-times"></i></span>
@@ -447,7 +448,7 @@
             <section class="commodityGroup">
                 <section class="commodity">
                     <section class="graphics">
-                        <section class="love"><i class="bi bi-heart"></i> <span>75</span></section>
+                        <!-- <section class="love"><i class="bi bi-heart"></i> <span>75</span></section> -->
                         <section class="img"><img src="https://fakeimg.pl/300x250/394897/fff" alt="拍攝商品圖"></section>
                     </section>
                     <section class="bid">
