後台頁面新增

--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -290,7 +290,7 @@
                                     },
                                     // 跳回文章總覽
                                 }).then(function() {
-                                    // window.location = "articleAll.html";
+                                    window.location = "articleAll.html";
                                 });
                             }
                         });
