--- a/html/backAcution.html
+++ b/html/backAcution.html
@@ -5,17 +5,17 @@
                     <li v-for = 'title in titles'>{{title}}</li>
                     <li></li>
                 </ul>
-                <ul v-for='(member,key) in members' 
+                <ul v-for='(auction,key) in auctions' 
                 class="memberList">            
-                    <li>{{member.auctionNo}}</li>
-                    <li>{{member.productNumber}}</li>
-                    <li>{{member.productName}}</li>
-                    <li>{{member.memNo}}</li>
-                    <li>{{member.startingPrice}}</li>
-                    <li>{{member.price}}</li>
-                    <li>{{member.startDate}}</li>
-                    <li>{{member.finishDate}}</li>
-                    <li>{{member.auctionStatus}}</li>    
+                    <li>{{auction.auctionNo}}</li>
+                    <li>{{auction.productNumber}}</li>
+                    <li>{{auction.productName}}</li>
+                    <li>{{auction.memNo}}</li>
+                    <li>{{auction.startingPrice}}</li>
+                    <li>{{auction.price}}</li>
+                    <li>{{auction.startDate}}</li>
+                    <li>{{auction.finishDate}}</li>
+                    <li>{{auction.auctionStatus}}</li>    
                     <li>編輯與查看</li>
                 </ul>
             </div>
@@ -26,17 +26,14 @@
             el: '#app',
             data: {
                 titles: ['拍賣編號',  '拍賣商品', '商品名稱',  '上架會員', '起標價', '定價', '開始時間', '結束時間', '拍賣狀態','', ],
-                members:[{
-                    'auctionNo':'001',
-                    'productNumber':'75862',
-                    'productName':'深淵',
-                    'memNo':'0057',
-                    'startingPrice':'10,000',
-                    'price':"68,000",
-                    'startDate':"2021/01/01",
-                    'finishDate':"2021/02/01",
-                    'auctionStatus':"拍賣中",
-                },],
+                auctions:[],
+            },
+            mounted(){
+                axios.get('php/backAuctionSelect.php').then((res)=>{
+                    this.auctions = res.data;
+                }).catch((err)=>{
+                    console.log(err)
+                })
             },
             methods: {},
             computed: {},
