藝廊燈箱+RWD版本

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -28,8 +28,8 @@
         })
     </script>
     <!-- 登入ＥＮＤ  -->
-  </head>
-  <body>
+</head>
+<body>
     @@include('layout/header.html',{ "headerClass":"SurroundViewHeader" })
     <div id="stats"></div>
     <!-- 香菸 -->
@@ -192,12 +192,18 @@
     <div class="galleryHint" id="galleryHint">
         <i class="closeHint fas fa-times" id="closeHint"></i>
         <div class="owl-carousel owl-theme">
-            <div>
+            <!-- <div>
+                <img src="" alt="">
                 <img src="assets/image/instruction_1.gif" alt="操作動畫">
             </div>
             <div>
-                <img src="assets/image/instruction_2.gif" alt="操作動畫">
+                <img src="" alt="">
+                <img src="assets/image/instruction_3.gif" alt="操作動畫">
             </div>
+            <div>
+                <img src="" alt="">
+                <img src="assets/image/instruction_2.gif" alt="操作動畫" >
+            </div> -->
         </div>
     </div>
 </body>
@@ -205,7 +211,6 @@
 
 <!-- 燈箱.js -->
 <!-- OwlCarousel -->
-
 <script src="js/owl/owl.carousel.js"></script>
 <script src="js/owl/owl.carousel.min.js"></script>
 <script src="js/gallery.js"></script>
