--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -377,7 +377,7 @@
                         </section>
                         <section>
                             <span>膚色：</span>
-                            <input class="adjustmentLever" disabled type="range" min="0" max="2" oninput="ChangeCookieImg()" onchange="ChangeCookieImg()">
+                            <input class="adjustmentLever" disabled type="range" min="0" max="2" oninput="ChangeCookieImg(true)" onchange="ChangeCookieImg(true)">
                             <!--
                             <span class="adjustmentLever">
                                 <span class="adjustmentLeverContent"></span>
