--- a/html/productSingle.html
+++ b/html/productSingle.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="js/vue/vue.js" defer></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
-    <script src="js/productItem.js" defer></script>
+    <script src="js/productItemOld.js" defer></script>
     <!-- 登入  -->
     <script src="js/loginCheck.js"></script>
     <script >
