--- a/html/produtFromPhp.html
+++ b/html/produtFromPhp.html
@@ -4,15 +4,118 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>產品測試</title>
-    <script src="js/vue/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <title>藝論商品</title>
+    <!-- 頁籤icon -->
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
+    <link rel="stylesheet" href="assets\css\style.css">
+    <script src="js/vue/vue.js" defer></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
     <script src="js/jquery/jquery.js"></script>
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script >
+        window.addEventListener('load',function(){
+            loginCheck(false);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
+<!-- 商品單頁_頁首區域 -->
+<!-- @@include('layout/header.html') -->
+@@include('layout/headerNormal.html',{"headerClass":""})
+<!-- 許瑀芹 -->
+<!-- 麵包屑 -->
     <div id="app">
-        <p>test</p>
-        <p>{{admin.adminName}}</p>
+    <section class="SingleProductHead">
+        <div class="productBread size marginAuto">
+            <ul>
+                <li><a href="homePage.html"  class="lightColor">首頁</a></li>
+                <li><a href="prouductAll.html"  class="lightColor">>拍賣廳</a></li>
+                <li><a href=""  class="epBColor">>{{product.productName}}</a></li>
+            </ul>
+        </div>
+    </section>
+<!-- 許瑀芹 -->
+    <section class="SingleProductIntro">
+        <div class="sizeAdjustBox size marginAuto">
+            <div class="imgBox">
+                <img :src="indexImageUrl" id="img01">
+                <!-- <img :src="imgs[index+x]" id="img02" v-on:click="smallToBig(index,x)">
+                <img :src="imgs[index+y]" id="img03" v-on:click="smallToBig(index,y)">
+                <img :src="imgs[index+z]" id="img04" v-on:click="smallToBig(index,z)"> -->
+                <!-- 定位absolute，父層imgBox，定位position -->
+                <div class="arrowButton linkItem" >
+                    <div class="leftArrow" v-on:click="changeIndex(-1)">
+                        &#60;
+                    </div>
+                </div>
+                <div class="arrowButton right linkItem" >
+                    <div class="rightArrow" v-on:click="changeIndex(1)">
+                        &#62;
+                    </div>
+                </div>
+                <div class="changeButton linkItem">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+            </div>
+            <div class="introAll">
+                <article class="introBox">
+                    <h2 class="deepColor">{{product.productName}}</h2>
+                    <div class="introtext">
+                        <p class="deepColor">{{product.info}}</p>
+                    </div>
+                    <div class="time">
+                        <p class="lightColor">2小時47分17秒結束</p>
+                        <p class="lightColor">{{product.bidTimes}}</p>
+                    </div>
+                    <div class="bidBox bid">  
+                        <div>
+                            <h4 class="deepColor">
+                                目前出價：<span class="deepColor">${{product.startingPrice}}</span>
+                            </h4>
+                        </div>
+                        <div>
+                            <a href="">
+                                <span class="lightColor small">投標紀錄</span>
+                                <span class="lightColor small">30</span>
+                                <span class="lightColor small">筆</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="bidBox buy">  
+                        <div>
+                            <h4 class="deepColor">
+                                直購價：<span class="epBColor">${{product.closingPrice}}</span>
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="bidBox inputBox">
+                        <input type="text" :placeholder="product.startingPrice+product.bidInterval">
+                    </div>
+                    <div class="bidBox hint">
+                        <span class="small lightColor">
+                            投入${{product.startingPrice+product.bidInterval}}或更多
+                        </span>
+                    </div>
+                    <div class="like mainColor">
+                        <div class="pic">
+                            <img src="assets/image/all_like.png" alt="">
+                        </div>
+                        <span class="small deepColor">
+                            75
+                        </span>
+                    </div>
+                </article>
+                <div class="introButton">
+                    <button class="squareOutline introButtonItem">出價</button>
+                    <button class="square introButtonItem">直接價購買</button>
+                </div>
+            </div>
+        </div>
+    </section>
     </div>
 <script>
 $(document).ready(function() {  
@@ -25,9 +128,49 @@ $(document).ready(function() {
         el:"#app",
         data:{
             number:number,
-            admin:[],
+            product:[],
+            index: 0,
+            tem:0,
+            n:0,
+            x:1,
+            y:2,
+            z:3,
+            prodImage:[],
+            indexImage:[],
+            indexImageUrl:[],
+            imgs:[
+            'https://picsum.photos/300/200/?random=10',
+            'https://picsum.photos/300/200/?random=8',
+            'https://picsum.photos/300/200/?random=1',
+            'https://picsum.photos/300/200/?random=2',
+            ]
         },
         methods:{
+            changeIndex:function(change){
+                this.n= this.n+change;
+                if(this.n<0){
+                    this.n=3
+                }else if (this.n>3){
+                    this.n=0
+                }
+            },
+            smallToBig:function(index,change){
+                console.log("change:"+change)
+                console.log("n:"+this.n)
+                if(change==this.x){
+                    this.tem = this.n
+                    this.n = this.x
+                    this.x = this.tem
+                }else if(change==this.y){
+                    this.tem = this.n
+                    this.n = this.y
+                    this.y = this.tem
+                }else if(change==this.z){
+                    this.tem = this.n
+                    this.n = this.z
+                    this.z = this.tem
+                }
+            },
         },
         mounted(){
             let thisVue = this;
@@ -38,17 +181,38 @@ $(document).ready(function() {
                     number:thisVue.number,
                 },
                 success: function(data) {
-                    thisVue.admin = JSON.parse(data);
-                    console.log(data);
-                    console.log(thisVue.admin);
+                    thisVue.product = JSON.parse(data);
+                    // console.log(data);
+                    // console.log(thisVue.product);
                 },
                 error: function() {
                     console.log('ajax error');
                 }
-            });
+            }),
+            axios.get('php/backImageSelect.php').then((res)=>{
+                this.prodImage = res.data;
+                console.log(this.prodImage)
+                for(let i =0; i<this.prodImage.length; i++){
+                    if(this.prodImage[i].prodNo == this.number){
+                        console.log("現在的網址",this.number);
+                        this.indexImage.push("assets/image/commodity/"+this.prodImage[i].img);
+                        console.log(this.indexImage);
+                        this.indexImageUrl =this.indexImage[0];
+                        console.log(this.indexImageUrl)
+                    }
+                }
+            }).catch((err)=>{
+                console.log(err)
+            })
         }
     })
-})
+});
+$(document).ready(function(){
+    // 加入收藏
+    $('.like .pic img').click(function(e){
+        $(this).toggleClass('active');
+    });
+});
 </script>
 </body>
 </html>
