listing page html

--- a/html/listing.html
+++ b/html/listing.html
@@ -394,7 +394,7 @@
                     </div>
                     <section class="btn">
                         <input type="button" class="btnProduct roundOutline" id="btnProduct2" value="資訊確認">
-                        <input type="submit" class="btnProduct round" id="btnProduct3" value="送出(審核)" onclick="window.alert('上架提交成功')">
+                        <input type="submit" class="btnProduct round" id="btnProduct3" value="送出(審核)" onclick="window.alert('提交成功')">
                     </section>
                 </form>
             </section>
