--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -197,8 +197,6 @@
                 </p>
                 <p class="information">信用卡：<span id="creditCard3DPage" class="showChangeValue" name="6">text</span><input class="changeValue" value="int" name="6" placeholder="請輸入您的信用卡"></input>
                 </p>
-                <p class="information">註冊日期：<span id="enrollDate3DPage">20220224</span>
-                </p>
             </section>
             <section class="profilePicture">
                 <section class="img characterAdjustment_box"><img class="characterAdjustment" src="https://fakeimg.pl/200/394897/fff" alt="頭像"></section>
@@ -296,6 +294,7 @@
                 </section>
                 <section class="recordFooter">
                     <section>
+                        <button class="round round3dBtn" type="button">前往結帳</button>
                         <p>訂單金額:$3000</p>
                     </section>
                     <!-- <section class="buttonGroup">
@@ -303,6 +302,10 @@
                         <button class="round round3dBtn" type="button">按鈕</button>
                     </section> -->
                 </section>
+                <section class="Payment">
+                    <button class="round round3dBtn" type="button">前往付款頁面</button>
+                </section>
+
             </section>
             <section class="record">
                 <section class="recordTitle">
